<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pure_background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProfileActivity" >

     <EditText
        android:id="@+id/editTextUsernameProfil"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:maxLength="12"
        android:hint="@string/username" >
    </EditText>

    <GridLayout
        android:layout_width="222dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:columnCount="2" >

        <ImageView
            android:id="@+id/imageViewPlayerIconProfil"
            android:layout_width="113dp"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:contentDescription="@string/your_photo"
            android:src="@drawable/default_icon" />

        <ImageButton
            android:id="@+id/buttonCameraProfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="left|center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_row="0"
            android:clickable="true"
            android:focusableInTouchMode="false"
            android:src="@drawable/camera" />

    </GridLayout>

    <CheckBox
        android:id="@+id/checkBoxSoundsProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sounds" />

    <CheckBox
        android:id="@+id/checkBoxSaveAskProfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_questions" />

    <Button
        android:id="@+id/buttonSaveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button"
        android:text="Save"
        android:textColor="#ffffff" />
        
    </LinearLayout>


