<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pure_background"
    android:orientation="vertical" >

    <GridLayout
        android:id="@+id/viewIAm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tab2_panel"
        android:columnCount="2"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="0"
            android:text="@string/iam"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextIAm"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:ems="10"
            android:hint="@string/hist_i_am" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/buttonIAm"
            android:layout_width="80dp"
            android:layout_height="42dp"
            android:layout_column="1"
            android:layout_gravity="top"
            android:layout_row="1"
            android:background="@drawable/button"
            android:text="@string/check"
            android:textColor="#ffffff" />

    </GridLayout>

    <ListView
        android:id="@+id/historyList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
